fixing overlap of progress bar fixes #861

--- a/posts/chris-clark/less/app.less
+++ b/posts/chris-clark/less/app.less
@@ -433,8 +433,8 @@ img {
     .jp-progress-container {
         position: absolute;
         top: 15px;
-        right: 20px;
-        width: 300px;
+        right: 60px;
+        width: 270px;
 
         .jp-seek-bar {
             position: absolute;
@@ -444,8 +444,6 @@ img {
 
         .player-progress {
             cursor: pointer;
-            width: 250px;
-            overflow: hidden;
 
             .jp-seek-bar {
                 height: 10px;
@@ -468,7 +466,7 @@ img {
         .current-time {
             position: absolute;
             top: 0;
-            right: 0;
+            right: -50px;
             font-size: 12px;
         }
     }
